// JS //  DrawerTouch : Fix de card en mode mobile qui n'enregistrait plus le scrolling dû à la scrollbar devenant enregistrée sur la card - L'event a été déporté sur la card et non plus le show drawer - // CSS // Fix en mode mobile du drawer qui pouvait toujours s'apercevoir en fonction des browser alors qu'il n'était pas visible avant transformation - Ajout d'un clear pour le drawer -

--- a/resources/css/LightModeToggle.css
+++ b/resources/css/LightModeToggle.css
@@ -23,6 +23,8 @@ Default status : Dark Theme
     
     /* width: 100%; */
     padding: 5px;
+    overflow: hidden;
+
     /* max-height: 40px; */
     margin: 20px auto;
     > label[for=lightmode-toggle] {
@@ -47,6 +49,7 @@ Default status : Dark Theme
             position: absolute;
             border-radius: 100vh;
             box-shadow: var(--button-shadow);
+            overflow: hidden;
         }
         &:active::after, &:hover::after, &:focus::after {
             width: calc(((var(--width) + (var(--width) * 0.03)) / 2) * 1px);
